Complete time feature extraction and data set sorting

--- a/main.ipynb
+++ b/main.ipynb
@@ -100,6 +100,64 @@
     "collapsed": false
    },
    "id": "b0c2e5922a26caa1"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Extract time features"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c5a533a2b1f01a79"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "data['year'] = data['datetime'].dt.year\n",
+    "data['month'] = data['datetime'].dt.month\n",
+    "data['day'] = data['datetime'].dt.day\n",
+    "data['hour'] = data['datetime'].dt.hour\n",
+    "data['minute'] = data['datetime'].dt.minute\n",
+    "data['second'] = data['datetime'].dt.second\n",
+    "data['dayofweek'] = data['datetime'].dt.dayofweek"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c0beb939e4303617"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Time series models need to ensure that the data set is arranged in time order"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dfdf8be0feb86374"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Sort the data by datetime\n",
+    "data = data.sort_values(by='datetime')\n",
+    "\n",
+    "# Drop the original date, time, and timestamp columns\n",
+    "data.drop(['date', 'time', 'datetime', 'type'], axis=1, inplace=True)\n",
+    "\n",
+    "# Adjust feature order\n",
+    "order = ['year', 'month', 'day', 'hour', 'minute', 'second', 'dayofweek', 'FC1_Read_Input_Register', 'FC2_Read_Discrete_Value', 'FC3_Read_Holding_Register', 'FC4_Read_Coil', 'label']\n",
+    "data = data[order].astype('int32')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "87cbc212dbe19442"
   }
  ],
  "metadata": {
