Completed splitting the dataset

--- a/main.ipynb
+++ b/main.ipynb
@@ -158,6 +158,39 @@
     "collapsed": false
    },
    "id": "87cbc212dbe19442"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Split the dataset (Sequential Split)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "347aaeb8bf6dd766"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Calculate split points\n",
+    "split_idx = int(len(data) * 0.8)\n",
+    "\n",
+    "# Split the data set, keeping order\n",
+    "train_data = data.iloc[:split_idx]\n",
+    "test_data = data.iloc[split_idx:]\n",
+    "\n",
+    "# Separate features and labels\n",
+    "X_train = train_data.drop('label', axis=1)\n",
+    "y_train = train_data['label']\n",
+    "X_test = test_data.drop('label', axis=1)\n",
+    "y_test = test_data['label']"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7f9a3e7015aaf6cb"
   }
  ],
  "metadata": {
