--- a/main.ipynb
+++ b/main.ipynb
@@ -191,6 +191,32 @@
     "collapsed": false
    },
    "id": "7f9a3e7015aaf6cb"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Data preprocessing (Normalization)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "17f2fffdb83cab7f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "feature_columns = [col for col in X_train.columns if col != 'label']\n",
+    "scaler = MinMaxScaler()\n",
+    "X_train[feature_columns] = scaler.fit_transform(X_train[feature_columns]).astype('float32')\n",
+    "X_test[feature_columns] = scaler.transform(X_test[feature_columns]).astype('float32')\n",
+    "X_train.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "485e69a0e89e7b9"
   }
  ],
  "metadata": {
