Create and initialize models

--- a/main.ipynb
+++ b/main.ipynb
@@ -217,6 +217,78 @@
     "collapsed": false
    },
    "id": "485e69a0e89e7b9"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Create model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "25c12c1b7fb50ea4"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class LightweightLSTM(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size, num_layers=1, width_multiplier=1.0):\n",
+    "        super(LightweightLSTM, self).__init__()\n",
+    "        # Adjust hidden size based on the width multiplier\n",
+    "        adjusted_hidden_size = int(hidden_size * width_multiplier)\n",
+    "\n",
+    "        # Define the LSTM layer\n",
+    "        self.lstm = nn.LSTM(input_size, adjusted_hidden_size, num_layers=num_layers, batch_first=True)\n",
+    "\n",
+    "        self.linear_1 = nn.Linear(adjusted_hidden_size, hidden_size)\n",
+    "        self.linear_2 = nn.Linear(hidden_size, output_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # LSTM layer\n",
+    "        lstm_out, _ = self.lstm(x)\n",
+    "\n",
+    "        # Take the output of the last time step\n",
+    "        last_time_step_out = lstm_out[:, -1, :]\n",
+    "\n",
+    "        # Output layer\n",
+    "        x = self.linear_1(last_time_step_out)\n",
+    "        out = self.linear_2(x)\n",
+    "        return out"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8bcf431bb0a40618"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Initialize model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3417f767ae1b5015"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "features_num = X_train.shape[1]\n",
+    "hidden_neurons_num = 512\n",
+    "output_neurons_num = 1\n",
+    "lstm_num_layers = 2\n",
+    "multiplier = 0.5\n",
+    "\n",
+    "model = LightweightLSTM(features_num, hidden_neurons_num, output_neurons_num, lstm_num_layers, multiplier).to(device)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2d66654954854fc2"
   }
  ],
  "metadata": {
