Completed model training code

--- a/main.ipynb
+++ b/main.ipynb
@@ -338,6 +338,66 @@
     "collapsed": false
    },
    "id": "578fb1053dfb20ed"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Training model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "677881d18ae0a8bf"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "num_epochs = 100\n",
+    "pbar = tqdm(total=num_epochs)\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    running_loss = 0.0\n",
+    "    running_accuracy = 0.0\n",
+    "    loss_list = [None] * num_epochs\n",
+    "    acc_list = [None] * num_epochs\n",
+    "    times = 0\n",
+    "\n",
+    "    for inputs, labels in train_loader:\n",
+    "        # FP\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "\n",
+    "        # BP and optimization\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # Calculate indicators\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            probabilities = torch.sigmoid(outputs)\n",
+    "            predictions = (probabilities > 0.5).float().cpu().numpy()\n",
+    "\n",
+    "            # Calculate indicators\n",
+    "            y = labels.cpu().numpy()\n",
+    "            running_loss += loss.item() * inputs.size(0)\n",
+    "            running_accuracy += accuracy_score(y, predictions)\n",
+    "            times += 1\n",
+    "            \n",
+    "    epoch_loss = running_loss / len(train_loader.dataset)\n",
+    "    accuracy = running_accuracy / times\n",
+    "    loss_list[epoch] = epoch_loss\n",
+    "    acc_list[epoch] = accuracy\n",
+    "    \n",
+    "    pbar.update(1)\n",
+    "    print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {epoch_loss}, Accuracy: {accuracy}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "234ca3f008e97e4b"
   }
  ],
  "metadata": {
