Completed the code for predicting the unseen test set

--- a/main.ipynb
+++ b/main.ipynb
@@ -398,6 +398,42 @@
     "collapsed": false
    },
    "id": "234ca3f008e97e4b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Unseen test set performance"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "74bc101f20737968"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "X_test_tensor = torch.tensor(X_test.values).float().unsqueeze(1).to(device)\n",
+    "\n",
+    "model.eval()\n",
+    "outputs = model(X_test_tensor)\n",
+    "with torch.no_grad():\n",
+    "    probabilities = torch.sigmoid(outputs)\n",
+    "    predictions = (probabilities > 0.5).float().cpu().numpy()\n",
+    "\n",
+    "    # 计算指标\n",
+    "    acc = accuracy_score(y_test, predictions)\n",
+    "    precision = precision_score(y_test, predictions)\n",
+    "    recall = recall_score(y_test, predictions)\n",
+    "    f1 = f1_score(y_test, predictions)\n",
+    "\n",
+    "    print(\"Accuracy: \", acc, \", Precision: \", precision, \", Recall: \", recall, \", F1: \", f1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ff3af552cbe05e41"
   }
  ],
  "metadata": {
