Add code to save the model

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-19T05:52:08.581578Z",
-     "start_time": "2023-11-19T05:52:08.473989Z"
+     "end_time": "2023-11-19T06:16:37.764322Z",
+     "start_time": "2023-11-19T06:16:37.760200Z"
     }
    },
    "outputs": [],
@@ -34,7 +34,8 @@
     "from torch.utils.data import TensorDataset\n",
     "from torch.utils.data import DataLoader\n",
     "from matplotlib import pyplot as plt\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -2131,6 +2132,44 @@
     }
    },
    "id": "ff3af552cbe05e41"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Save model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a37bb5c5380a6d9e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved as: model_2023-11-19_17-16-41.pt\n"
+     ]
+    }
+   ],
+   "source": [
+    "current_time = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "model_filename = f\"model_{current_time}.pt\"\n",
+    "torch.save(model.state_dict(), model_filename)\n",
+    "\n",
+    "print(\"Model saved as:\", model_filename)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-19T06:16:41.584475Z",
+     "start_time": "2023-11-19T06:16:41.568513Z"
+    }
+   },
+   "id": "e0e155fdfdd5bb14"
   }
  ],
  "metadata": {
