update column value counts

--- a/data_visualisation.ipynb
+++ b/data_visualisation.ipynb
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ouput"
+    "## check value counts"
    ]
   },
   {
@@ -261,6 +261,156 @@
    ],
    "source": [
     "data['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        67\n",
+       "47954    27\n",
+       "63090    25\n",
+       "58321    25\n",
+       "57       25\n",
+       "         ..\n",
+       "64758     1\n",
+       "27447     1\n",
+       "20499     1\n",
+       "10114     1\n",
+       "54391     1\n",
+       "Name: FC1_Read_Input_Register, Length: 53670, dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['FC1_Read_Input_Register'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        59\n",
+       "63985    30\n",
+       "39874    27\n",
+       "326      26\n",
+       "29527    26\n",
+       "         ..\n",
+       "54468     1\n",
+       "37231     1\n",
+       "33056     1\n",
+       "30614     1\n",
+       "42273     1\n",
+       "Name: FC2_Read_Discrete_Value, Length: 53558, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['FC2_Read_Discrete_Value'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        64\n",
+       "8211     28\n",
+       "25013    28\n",
+       "33554    25\n",
+       "58160    25\n",
+       "         ..\n",
+       "43581     1\n",
+       "6043      1\n",
+       "52997     1\n",
+       "34988     1\n",
+       "19415     1\n",
+       "Name: FC3_Read_Holding_Register, Length: 53451, dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['FC3_Read_Holding_Register'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        59\n",
+       "37322    27\n",
+       "52722    27\n",
+       "23308    26\n",
+       "47641    25\n",
+       "         ..\n",
+       "1641      1\n",
+       "17197     1\n",
+       "25372     1\n",
+       "18714     1\n",
+       "5013      1\n",
+       "Name: FC4_Read_Coil, Length: 53668, dtype: int64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['FC4_Read_Coil'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "normal       222855\n",
+       "backdoor      40011\n",
+       "password      18115\n",
+       "injection      5186\n",
+       "scanning        529\n",
+       "xss             498\n",
+       "Name: type, dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['type'].value_counts()"
    ]
   },
   {
