Modify normalization method

--- a/mlp.ipynb
+++ b/mlp.ipynb
@@ -19,6 +19,7 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
@@ -519,11 +520,17 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "current_time = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
-    "model_filename = f\"model_mlp_{current_time}.pt\"\n",
-    "torch.save(model.state_dict(), model_filename)\n",
+    "save_folder = \"save_model\"\n",
     "\n",
-    "print(\"Model saved as:\", model_filename)"
+    "if not os.path.exists(save_folder):\n",
+    "    os.makedirs(save_folder)\n",
+    "\n",
+    "current_time = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "model_filename = f\"model_rnn_{current_time}.pt\"\n",
+    "full_path = os.path.join(save_folder, model_filename)\n",
+    "torch.save(model.state_dict(), full_path)\n",
+    "\n",
+    "print(\"Model saved as:\", full_path)"
    ],
    "metadata": {
     "collapsed": false,
