--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -112,16 +112,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# TODO: Complete EDA"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "aee1e602ca5c766b"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "Combine 'date' and 'time' into a single datetime column"
    ],
    "metadata": {
@@ -131,26 +121,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/qx/28c_j79n3zn_3rkwzsdcmn240000gn/T/ipykernel_11140/2882021498.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  data['datetime'] = pd.to_datetime(data['date'] + ' ' + data['time'])\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "data['datetime'] = pd.to_datetime(data['date'] + ' ' + data['time'])"
+    "data['date'] = data['date'].str.strip()\n",
+    "data['time'] = data['time'].str.strip()\n",
+    "data['datetime'] = pd.to_datetime(data['date'] + ' ' + data['time'], format='%d-%b-%y %H:%M:%S')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-22T10:26:38.263270Z",
-     "start_time": "2023-11-22T10:26:33.022890Z"
-    }
+    "collapsed": false
    },
    "id": "b0c2e5922a26caa1"
   },
