Completed some markdown comments of rnn

--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -202,7 +202,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Split the dataset (Sequential Split)"
+    "---\n",
+    "# Data Split\n",
+    "## Training, and Testing Sets\n",
+    "In this project, I utilized both training and test sets. Initially, I designated 80% of the data as the training set and the remaining 20% as an unseen test set. This division ensures that the model has sufficient data for learning during the training process, enhancing its accuracy and robustness while preventing underfitting. Moreover, using 20% of unseen data as an independent test set to evaluate the model's final performance helps in assessing the model's generalization capability on new data, rather than merely measuring its fit on the training data.\n",
+    "\n",
+    "The approach here differs from using sklearn.model_selection.train_test_split. We employed a Recurrent Neural Network with Long Short-Term Memory (LSTM), necessitating the preservation of the dataset's chronological order. This is done to maintain the continuity of the time series data, enabling the network to more effectively learn and predict patterns and trends within the time series."
    ],
    "metadata": {
     "collapsed": false
@@ -239,7 +244,18 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Data preprocessing (Normalization)"
+    "---\n",
+    "# Data preprocessing \n",
+    "## Feature Scaling\n",
+    "Feature scaling is a crucial step to enhance the performance and convergence speed of the model. In this part of the code, we performed the following actions:\n",
+    "\n",
+    "1. **Selecting Feature Columns**: We created a list of feature columns `feature_columns`, which includes all columns except the 'label' column. This is because the 'label' column is the target variable and should not be considered for feature scaling.\n",
+    "\n",
+    "2. **Applying MinMax Scaling**: We used `MinMaxScaler` to scale the features. This scaler transforms all feature values to a range between 0 and 1. Such scaling is beneficial for maintaining relative scales between different features and also prevents potential negative impacts of extreme values on model training.\n",
+    "\n",
+    "3. **Transforming Training and Test Data**: The `fit_transform` method is applied to the training data to learn the distribution of the data and transform it. For the test data, we only use the `transform` method, ensuring that we scale the test data using the same parameters (learned from the training data) to avoid data leakage, which is crucial for an accurate evaluation of model performance.\n",
+    "\n",
+    "4. **Viewing Information of Transformed Training Data**: Through `X_train.info()`, we can view the information of the scaled training dataset, including the data type and the number of non-null values for each feature. This helps to verify that the scaling process has been correctly executed and ensures that the dataset is ready for model training."
    ],
    "metadata": {
     "collapsed": false
@@ -294,7 +310,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Execution model\n",
+    "# Model Implementation\n",
     "## Create model"
    ],
    "metadata": {
